; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Kernel.c_TickGetRealtimeTickValue64.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Kernel.c_TickGetRealtimeTickValue64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i64, i64 }
%struct.timezone = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @TickGetRealtimeTickValue64() #0 {
  %1 = alloca %struct.timeval, align 8
  %2 = alloca %struct.timezone, align 8
  %3 = alloca i64, align 8
  %4 = bitcast %struct.timeval* %1 to %struct.timezone*
  %5 = call i32 @memset(%struct.timezone* %4, i32 0, i32 16)
  %6 = call i32 @memset(%struct.timezone* %2, i32 0, i32 16)
  %7 = bitcast %struct.timeval* %1 to %struct.timezone*
  %8 = call i32 @gettimeofday(%struct.timezone* %7, %struct.timezone* %2)
  %9 = getelementptr inbounds %struct.timeval, %struct.timeval* %1, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = mul i64 %10, 1000
  %12 = getelementptr inbounds %struct.timeval, %struct.timeval* %1, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = udiv i64 %13, 1000
  %15 = add i64 %11, %14
  store i64 %15, i64* %3, align 8
  %16 = load i64, i64* %3, align 8
  ret i64 %16
}

declare dso_local i32 @memset(%struct.timezone*, i32, i32) #1

declare dso_local i32 @gettimeofday(%struct.timezone*, %struct.timezone*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
